test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-SELinux/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: bar
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: foo
