test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-SELinux/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-selinux
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
